[package]
name = "tsmusicbot"
version = "0.1.0"
description = "A TeamSpeak3 music bot."
edition = "2018"



[dependencies]
byteorder = "1.4.3"
audiopus = "0.2.0"
libmount = "0.1.15"
serde = "1.0.124"
serde_json = "1.0.64"
tsclientlib = { path = "./lib/tsclientlib/tsclientlib" }
tsproto-packets = { path = "./lib/tsclientlib/utils/tsproto-packets" }
anyhow = "1"
futures = "0.3"
tokio = { version = "1", features = ["time"] }
tokio-stream = "0.1"
log = "0.4"

[dependencies.slog]
version = "2"
features = ["max_level_trace", "release_max_level_info"]

[dev-dependencies]

tokio = { version = "1", features = ["io-util", "net", "rt-multi-thread", "rt", "signal"] }

